k8s/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: po-lin-expensy-backend
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: 'YOUR_METRICS_PORT'  
spec:
  type: ClusterIP
  selector:
    app: expensy-backend
  ports:
    - port: 8706
