k8s/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: po-lin-expensy-frontend
  # annotations:
  #   prometheus.io/scrape: 'true'
  #   prometheus.io/port: 'YOUR_METRICS_PORT'  
spec:
  type: NodePort
  selector:
    app: expensy-frontend
  ports:
    - port: 80
      nodePort: 30001
      targetPort: 3000
